--- a/knowscroll-frontend/package.json
+++ b/knowscroll-frontend/package.json
@@ -12,15 +12,24 @@
     "@mysten/dapp-kit": "^0.16.5",
     "@mysten/sui": "^1.30.1",
     "@tanstack/react-query": "^5.76.2",
-    "next": "15.1.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.6.5",
+    "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-swipeable": "^7.0.2",
+    "tailwind-merge": "^3.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "postcss": "^8",
